Test user view password resets
Affects: https://github.com/io7m/idstore/issues/47