@@ -180,6 +180,29 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>run-it</id>
+            <phase>integration-test</phase>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+            <configuration>
+              <argLine>
+                ${argLine}
+                --add-opens
+                org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+                --add-opens
+                org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- Determine test coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
